HE test.rtf file

--- a/src/main/resources/config/singlesString.properties
+++ b/src/main/resources/config/singlesString.properties
@@ -4,4 +4,6 @@ defaultBazaryabUsername=DEFAULT_BAZARYAB
 defaultBazaryabCode=0000
 shomaregharardadeomoomiebimemarkazi=0000
 bimemarkaziwsuser=pa6476test
-bimemarkaziwspassword=ciiws@plcyins
+bimemarkaziwspassword=ciiws@plcyins\
+legalserviceuser=pa6476
+legalservicepassword=ciiws@sabt92
